# prep-my-avatar

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE.md  README.md  config.example.json  docker-compose.yml  pyproject.toml  start.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
backend/: process_lock.py  requirements-dev.txt  requirements-ml.txt  requirements-scrape.txt  requirements.txt  run.py  update_recovery.py
backend/app/: __init__.py  capabilities.py  config.py  job_queue.py  models.py  netguard.py  process_lock.py  setup_installer.py  update_selftest.py  version.py
backend/infer/: face_score_infer.py  lama_infer.py  lama_model.py
backend/tests/: conftest.py  test_aitoolkit_remote.py  test_background_jobs.py  test_body_fidelity.py  test_capabilities.py  test_checkpoint_management.py  test_checkpoint_registry.py  test_cloud_boot.py  test_cloud_model_and_seams.py  test_cloud_routes.py  test_cloud_training_launch.py  test_cloud_training_monitor.py  test_concept_caption_omission.py  test_concept_dataset.py  test_config.py  test_curation_history.py  test_custom_base_paths.py  test_dataset_import_from_scrape.py  test_dataset_routes.py  test_dataset_service.py  test_face_scoring.py  (+36 more)
docs/: DATASET_GUIDE.md  VERSIONING.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  tsconfig.check.json
packaging/: build_portable.ps1  launcher.py  requirements-build.txt
scripts/: bootstrap_python.ps1  e2e-server.mjs
tests/: test_core.py
(+123 files in other folders)
